--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,8 @@ jobs:
     needs: lint
     runs-on: ubuntu-latest
     steps:
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
       - name: Checkout the code
         uses: actions/checkout@v2
 
